# claude-harness

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  OKF-research-and-impact-analysis.md  README.md  SETUP.md  WORKSPACE-PLAN.md  future-prompts.md  justfile  lefthook.yml  package-lock.json
.claude/: PACKAGING.md  settings.json
.claude-plugin/: plugin.json
.claude/agents/: doc-keeper.md  expert.md  planner.md  red-team.md  researcher.md  review-lens.md  reviewer.md  tester.md  verifier.md
.claude/commands/: adr.md  audit.md  brainstorm.md  compete.md  consult.md  debate.md  deep-research.md  loop.md  new-project.md  redteam.md  research-domain.md  research-library.md  review.md  simplify.md  spec.md  ultraplan.md
.claude/hooks/: check-docs-updated.mjs  format-edited.mjs  (+1 more)
docs/: desktop-commander-wsl-setup.md  routing.md  usage-auditing.md  workflow-loops.md
hooks/: usage-logger
memory/: decisions-log.md  index.md
scripts/: audit-usage.mjs  bootstrap-sandbox.sh  doctor.mjs  finish-git-repair.ps1  new-project.mjs  research-lint.mjs  setup-claude.mjs  stacks.mjs  sync-templates.mjs  usage-labels.json  validate-templates.mjs  validate-wiring.mjs  workspace-review.mjs
specs/: EXAMPLE-url-shortener.md
standards/: ci-cd.md  git.md  knowledge-format.md  principles.md  security.md
templates/python-service/: justfile  pyproject.toml
templates/python-service/.github/workflows/: ci.yml
templates/python-service/evals/: run.py
templates/python-service/src/app/: __init__.py  money.py
templates/python-service/tests/: test_money.py
(+289 files in other folders)
