[project]
name = "{{NAME}}"
version = "0.1.0"
description = "{{DESCRIPTION}}"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["pydantic>=2"]

[dependency-groups]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "mypy>=1.10", "mutmut>=2"]

[tool.ruff]
line-length = 100
[tool.mypy]
strict = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]
